# deeplearning-cpp

./: .gitignore  README.md
deeplearning/: CMakeLists.txt  backward propagator.lyx
deeplearning/src/: CMakeLists.txt  Colormod.h  activation.cpp  activation.h  common.cpp  common.h  datautil.cpp  datautil.h  featurecolumn.cpp  featurecolumn.h  layer.cpp  layer.h  loss.cpp  loss.h  main.cpp  matplotlibcpp.h  model.cpp  model.h  node.cpp  node.h  onehot.cpp  onehot.h  progressbar.cpp  progressbar.h  propagator.cpp  propagator.h  regularization.cpp  regularization.h
deeplearning/src/test/: datautiltests.cpp  demo.cpp  layertests.cpp  onehottests.cpp  test.h
